CHANGES IN VERSION 1.7.7
------------------------
 o add legend transparency to theme_transparent <2017-02-13, Mon>
   + <https://github.com/GuangchuangYu/ggtree/pull/112>
 o update citation info <2017-01-20, Fri>
 
CHANGES IN VERSION 1.7.6
------------------------
 o inset support reverse scale <2017-01-05, Thu>
   + https://groups.google.com/forum/?utm_medium=email&utm_source=footer#!msg/bioc-ggtree/_JPfm71Z8nM/6gL93oxHFQAJ

CHANGES IN VERSION 1.7.5
------------------------
 o disable labeling collapsed node as tip <2017-01-03, Tue>
   + https://groups.google.com/forum/#!topic/bioc-ggtree/nReqJatMvJQ
 o fortify.phylo4d via converting phylo4d to treedata object <2016-12-28, Wed>
 o improve viewClade function, use coord_cartesian instead of xlim <2016-12-28, Wed>
 o remove codes that move to treeio and now ggtree depends treeio <2016-12-20, Tue>

CHANGES IN VERSION 1.7.4
------------------------
 o is.ggtree function to test whether object is produced by ggtree <2016-12-06, Tue>
 o now branch.length can set to feature available in phylo4d@data and yscale is supported for phylo4d object <2016-12-06, Tue>
 o bug fixed of rm.singleton.newick, remove singleton parent instead of singleton <2016-12-01, Thu>
 o reorder phylo to postorder before ladderrize <2016-11-28, Mon>
 o allow yscale to use data stored in phylo4d object <2016-11-24, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/98
 o groupOTU method now accept 'overlap = c("overwrite", "origin", "abandon")' parameter <2016-11-16, Wed>
   + https://groups.google.com/forum/#!topic/bioc-ggtree/Q4LnwoTf1DM

CHANGES IN VERSION 1.7.3
------------------------
 o drop.tip method for NHX object <2016-11-11, Fri>
 o update startup message <2016-11-09, Wed>
 o reverse timescale x-axis <2016-11-07, Mon>
   + https://github.com/GuangchuangYu/ggtree/issues/87

CHANGES IN VERSION 1.7.2
------------------------
 o make missing colors in gheatmap invisible (previously use 'white') <2016-11-03, Thu>