@@ -137,7 +137,7 @@ GeomPointGGtree <- ggproto("GeomPointGGtree", GeomPoint,
                            setup_data = function(data, params) {
                                if (is.null(data$subset))
                                    return(data)
-                               data[data$subset,]
+                               data[which(data$subset),]
                            }
 
                            ## ,
