@@ -1,9 +1,11 @@
 CHANGES IN VERSION 1.7.7
 ------------------------
+ o geom_cladelabel support parse="emoji" <2017-02-16, Thu>
+ o aes(subset) now support logical vector contains NA <2017-02-16, Thu>
  o add legend transparency to theme_transparent <2017-02-13, Mon>
    + <https://github.com/GuangchuangYu/ggtree/pull/112>
  o update citation info <2017-01-20, Fri>
- 
+
 CHANGES IN VERSION 1.7.6
 ------------------------
  o inset support reverse scale <2017-01-05, Thu>
